# mock-jutsu-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GENERATOR_SOP.md  HOW-TO-MockJutsu-DE.html  HOW-TO-MockJutsu-EN.html  HOW-TO-MockJutsu-FR.html  HOW-TO-MockJutsu-RU.html  HOW-TO-MockJutsu-TR.html  HOW-TO-MockJutsu-UK.html  HOW-TO.html  HOW-TO.md  LICENSE  README.md  VERIFICATION_PLAN.md  docker-compose.yml  entrypoint.sh  generate_ai_content.py  generate_full_docs.py  generate_locale_docs.py  generate_report.py  index.html  llms.txt  manifest.json  pyproject.toml  robots.txt  setup.py  sitemap.xml  test_results.txt  validate_functions.py  yandex_d1ed04e2cbeda919.html
.github/workflows/: bandit.yml  ci.yml  docker-publish.yml  publish-pypi.yml
.postman/collections/: mock-jutsu.postman_collection.json
.well-known/: security.txt
HOW-TO/: sitemap-howto.xml
HOW-TO/DE/: HOW-TO-MockJutsu-DE.html
HOW-TO/DE/FUNCTION/: 3ds_cavv-DE.html  3ds_eci-DE.html  account_number-DE.html  account_number_masked-DE.html  account_type-DE.html  address_city-DE.html  address_full-DE.html  address_street-DE.html  age-DE.html  ai_embedding-DE.html  ai_sparse_vector-DE.html  ai_vector-DE.html  aml_risk_rating-DE.html  apdu-DE.html  api_key-DE.html  apppassword-DE.html  apr-DE.html  ar_cuit-DE.html  ar_dni-DE.html  asn1_fuzz-DE.html  atm_session-DE.html  au_abn-DE.html  au_acn-DE.html  au_tfn-DE.html  balance-DE.html  bank_name-DE.html  bearertoken-DE.html  bg_egn-DE.html  bic-DE.html  bik_code-DE.html  bio-DE.html  birthdate-DE.html  block_hash-DE.html  blockchain_network-DE.html  blood_type-DE.html  bloodtype-DE.html  bmi-DE.html  bond_yield-DE.html  br_cnpj-DE.html  br_cpf-DE.html  (+356 more)
HOW-TO/EN/: HOW-TO-MockJutsu-EN.html
HOW-TO/EN/FUNCTION/: 3ds_cavv-EN.html  3ds_eci-EN.html  account_number-EN.html  account_number_masked-EN.html  account_type-EN.html  address_city-EN.html  address_full-EN.html  address_street-EN.html  age-EN.html  ai_embedding-EN.html  ai_sparse_vector-EN.html  ai_vector-EN.html  aml_risk_rating-EN.html  apdu-EN.html  api_key-EN.html  apppassword-EN.html  apr-EN.html  ar_cuit-EN.html  ar_dni-EN.html  asn1_fuzz-EN.html  atm_session-EN.html  au_abn-EN.html  au_acn-EN.html  au_tfn-EN.html  balance-EN.html  bank_name-EN.html  bearertoken-EN.html  bg_egn-EN.html  bic-EN.html  bik_code-EN.html  bio-EN.html  birthdate-EN.html  block_hash-EN.html  blockchain_network-EN.html  blood_type-EN.html  bloodtype-EN.html  bmi-EN.html  bond_yield-EN.html  br_cnpj-EN.html  br_cpf-EN.html  (+356 more)
HOW-TO/FR/: HOW-TO-MockJutsu-FR.html
HOW-TO/FR/FUNCTION/: 3ds_cavv-FR.html  3ds_eci-FR.html  account_number-FR.html  account_number_masked-FR.html  account_type-FR.html  address_city-FR.html  address_full-FR.html  address_street-FR.html  age-FR.html  ai_embedding-FR.html  ai_sparse_vector-FR.html  ai_vector-FR.html  aml_risk_rating-FR.html  apdu-FR.html  api_key-FR.html  apppassword-FR.html  apr-FR.html  ar_cuit-FR.html  ar_dni-FR.html  asn1_fuzz-FR.html  atm_session-FR.html  au_abn-FR.html  au_acn-FR.html  au_tfn-FR.html  balance-FR.html  bank_name-FR.html  bearertoken-FR.html  bg_egn-FR.html  bic-FR.html  bik_code-FR.html  bio-FR.html  birthdate-FR.html  block_hash-FR.html  blockchain_network-FR.html  blood_type-FR.html  bloodtype-FR.html  bmi-FR.html  bond_yield-FR.html  br_cnpj-FR.html  br_cpf-FR.html  (+356 more)
HOW-TO/RU/: HOW-TO-MockJutsu-RU.html
HOW-TO/RU/FUNCTION/: 3ds_cavv-RU.html  3ds_eci-RU.html  account_number-RU.html  account_number_masked-RU.html  account_type-RU.html  address_city-RU.html  address_full-RU.html  address_street-RU.html  age-RU.html  (+387 more)
HOW-TO/TR/: HOW-TO-MockJutsu-TR.html
HOW-TO/UK/: HOW-TO-MockJutsu-UK.html
HOW-TO/content/: 3ds_cavv_DE.txt  3ds_cavv_EN.txt  3ds_cavv_FR.txt  3ds_cavv_RU.txt  3ds_cavv_TR.txt  3ds_cavv_UK.txt  3ds_eci_DE.txt  3ds_eci_EN.txt  3ds_eci_FR.txt  3ds_eci_RU.txt  3ds_eci_TR.txt  3ds_eci_UK.txt  account_number_DE.txt  account_number_EN.txt  account_number_FR.txt  account_number_RU.txt  account_number_TR.txt  account_number_UK.txt  account_number_masked_DE.txt  account_number_masked_EN.txt  account_number_masked_FR.txt  account_number_masked_RU.txt  account_number_masked_TR.txt  account_number_masked_UK.txt  account_type_DE.txt  account_type_EN.txt  account_type_FR.txt  account_type_RU.txt  account_type_TR.txt  account_type_UK.txt  address_city_DE.txt  address_city_EN.txt  address_city_FR.txt  address_city_RU.txt  address_city_TR.txt  address_city_UK.txt  address_full_DE.txt  address_full_EN.txt  address_full_FR.txt  address_full_RU.txt  (+2338 more)
api/: main.py
compliance/: algorithm_vectors.json  format_contracts.json  test_stats.json  validation_matrix.json
compliance/xsd/: camt.053.001.02.xsd  pain.001.001.09.xsd  pain.008.001.08.xsd
postman/: docker.postman_environment.json  generate_collection.py  local.postman_environment.json  mock-jutsu.postman_collection.json
scratch/: fix_cli_reference.py
scripts/: audit_compliance.py  build_validation_matrix.py  gen_placeholder_content.py  generate_descriptions.py  generate_sitemap.py  indexnow_notify.py  parity_check.py  run_all_checks.py  setup-hooks.py  update_stats.py
src/mockjutsu/: algorithms.py  cli.py  core.py  masker.py  regulations.py  validators.py
tests/: test_ai_vector.py  test_api.py  test_automotive.py  test_aviation.py  test_bank_statement.py  test_bip39.py  test_cardphysics.py  test_cli.py  test_cli_industrial.py  test_cli_output.py  test_cross_field_consistency.py  test_crypto_fuzz.py  test_edi.py  test_event_sourcing.py  test_external_validators.py  test_fido2.py  test_fix_protocol.py  test_gamedev.py  test_generators.py  test_hardware.py  test_hl7_fhir_dicom.py  test_intl_ids.py  test_iot_wireless.py  test_known_vectors.py  test_locale_coverage.py  test_mask.py  test_mrz.py  test_nmea.py  test_ohlcv.py  test_oidc.py  test_payments.py  test_performance.py  test_prometheus.py  test_psd2.py  test_reverse_regex.py  test_security.py  test_sync.py  test_tax_b2b.py  test_telemetry.py  test_tle.py  (+3 more)
tests/ui/: test_docs.py
(+837 files in other folders)
