[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockjutsu"
version = "1.1.2"
description = "Algorithmic mock data engine — 390+ types, 6 locales, real checksums. TCKN, IBAN, Luhn, VIN, NHS, SWIFT, crypto, MRZ, JMeter plugin and more."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Altan Sezer Ayan", email = "altansezerayan@gmail.com"}
]
keywords = [
    "mock", "fake", "data", "testing", "test-data", "synthetic", "faker",
    "checksum", "fintech", "banking", "data-generation", "national-id",
    "tckn", "iban", "luhn", "vin", "nhs", "swift", "mrz",
    "cpf", "pesel", "bsn", "ssn", "dni",
    "jmeter", "load-testing", "performance-testing",
    "rest-api", "cli", "qa", "qa-automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyfiglet>=0.8",
    "rich>=13.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "granian>=1.0",
    "httpx>=0.24",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "playwright>=1.30",
    "pytest-playwright>=0.4",
]
validation = [
    "python-stdnum>=1.20",
    "schwifty>=2023.0",
    "bip-utils>=2.9",
    "mrz>=0.6",
    "lxml>=5.0",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "mt940>=0.8",
    "hl7>=0.4",
    "fhir.resources>=7.0",
    "simplefix>=1.0",
    "netaddr>=1.0",
    "icd10-cm>=0.0.5",
    "cbor2>=5.0",
    "fido2>=1.1",
    "phonenumbers>=8.13",
]

[project.urls]
Homepage = "https://altansayan.github.io/mock-jutsu-api/"
Repository = "https://github.com/altansayan/mock-jutsu-api"
Documentation = "https://altansayan.github.io/mock-jutsu-api/"
"Bug Tracker" = "https://github.com/altansayan/mock-jutsu-api/issues"
Changelog = "https://github.com/altansayan/mock-jutsu-api/blob/main/CHANGELOG.md"

[project.scripts]
mockjutsu = "mockjutsu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=mockjutsu --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["mockjutsu"]
omit = ["src/mockjutsu/api/*", "src/mockjutsu/cli.py", "src/mockjutsu/data/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
